

Changes:
- automatically skip building testcases if C++ compiler not available
  (reminder: libHX itself does not require a C++ compiler)
- mc: fix an alignment-induced overallocation
- rand: use faster modulo-based variant for numbers within RAND_MAX range
- rand: use libc rand() almost exclusively, only use /dev/urandom for seed
Enhancements:
- time: add time delta functions (HX_diff_timeval/HX_diff_timespec)


libHX 2.9 (July 11 2009)
========================
Fixes:
- string: fixed number of fields and trailing NULL in HX_split4
Enhancements:
- string: add HX_basename_exact


libHX 2.8 (July 01 2009)
========================
Enhancements:
- HXproc now knows about HXPROC_NULL_*, which can be used to discard I/O
- HXproc: expressly prohibit HXPROC_STD* for HXproc_run_sync


libHX 2.7 (April 08 2009)
=========================
Fixes:
- install missing wx_helper.hpp


libHX 2.6 (March 28 2009)
=========================
Documentation:
- install documentation
- update project URLs
- add section about Miscellaneous functions
Changes:
- arbtree: add "flat view" operation
- misc: added HX_fls
- misc: make HX_time_compare otime-capable
- add wx_helper.hpp


libHX 2.5 (February 11 2009)
============================
Fixes:
- proc: fix fd setup when the standard channels are already closed


libHX 2.4 (February 05 2009)
============================
Documentation updates. A few internal cleanups, nothing user-visible.


libHX 2.3 (January 13 2009)
===========================
Fixes:
- defs: only use __builtin_offsetof with GCC >= 4
- misc: fix time_compare on FreeBSD to actually use mtimespec
- mc: handle HXmc_length(NULL)
- dir: do not cause directory traversal to restart after 2^32 entries


libHX 2.2 (January 01 2009)
===========================
Fixes:
- defs/cast: avoid warning between conversion from type[] to type *
- defs/cast: add fallback defs for const_castN()
- arbtree: correctly set errno (to ENOENT) in HXbtree_find and _get