@@ -11679,7 +11679,7 @@ libHX/option.h
 \series bold
 struct
 \series default
- HXbtree 
+ HXformat_map 
 \series bold
 *
 \series default
@@ -11713,7 +11713,7 @@ void
 \series bold
 struct
 \series default
- HXbtree 
+ HXformat_map 
 \series bold
 *
 \series default
@@ -11743,7 +11743,7 @@ int
 \series bold
 struct
 \series default
- HXbtree 
+ HXformat_map 
 \series bold
 *
 \series default
@@ -12314,7 +12314,7 @@ int
 \series bold
 struct
 \series default
- HXbtree 
+ HXformat_map 
 \series bold
 *
 \series default
@@ -12350,7 +12350,7 @@ int
 \series bold
 struct
 \series default
- HXbtree 
+ HXformat_map 
 \series bold
 *
 \series default
@@ -12392,7 +12392,7 @@ int
 \series bold
 struct
 \series default
- HXbtree 
+ HXformat_map 
 \series bold
 *
 \series default
@@ -12431,8 +12431,11 @@ HXformat_aprintf
 template
 \family default
  using the given table.
- This will produce a string in a HX memory container (hxmc_t), and the pointer
- is put into 
+ This will produce a string in a HX memory container (
+\family typewriter
+hxmc_t
+\family default
+), and the pointer is put into 
 \family typewriter
 *dest
 \family default
@@ -12537,7 +12540,7 @@ char
 \series bold
 struct
 \series default
- HXbtree 
+ HXformat_map 
 \series bold
 *
 \series default
