@@ -18,18 +18,22 @@ typedef char hxmc_t;
 #endif
 
 struct HXbtree;
+struct HXformat_map;
 struct HXoption;
 
 /*
  *	FORMAT.C
  */
-extern struct HXbtree *HXformat_init(void);
-extern void HXformat_free(struct HXbtree *);
-extern int HXformat_add(struct HXbtree *, const char *, const void *,
+extern struct HXformat_map *HXformat_init(void);
+extern void HXformat_free(struct HXformat_map *);
+extern int HXformat_add(struct HXformat_map *, const char *, const void *,
 	unsigned int);
-extern int HXformat_aprintf(const struct HXbtree *, hxmc_t **, const char *);
-extern int HXformat_sprintf(const struct HXbtree *, char *, size_t, const char *);
-extern int HXformat_fprintf(const struct HXbtree *, FILE *, const char *);
+extern int HXformat_aprintf(const struct HXformat_map *,
+	hxmc_t **, const char *);
+extern int HXformat_sprintf(const struct HXformat_map *,
+	char *, size_t, const char *);
+extern int HXformat_fprintf(const struct HXformat_map *,
+	FILE *, const char *);
 
 /*
  *	OPT.C
